# game

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/DemoControl/: CMakeLists.txt
examples/DemoControl/include/: Chunk.hpp  Game.hpp  ISpace.hpp  IVoxelRenderingBackend.hpp  Map.hpp  PerlynNoiseSpaceGenerator.hpp  VoxelRenderingBackend.hpp  VoxelSpace.hpp
examples/DemoControl/src/: main.cpp
examples/ModelLoading/: CMakeLists.txt  ModelExplorer.hpp  main.cpp
examples/MyGame/include/: Game.hpp  ISpace.hpp  ISpaceGenerator.hpp  Map.hpp  PerlynNoiseSpaceGenerator.hpp  Voxel.hpp  VoxelRenderingBackend.hpp  VoxelSpace.hpp
examples/MyGame/src/: main.cpp
examples/ParticleEngine/: CMakeLists.txt  ParticleEngine.hpp  main.cpp
examples/SnakeOpenGL/: CMakeLists.txt
examples/SnakeOpenGL/include/: CellFactory.hpp  Snake.hpp  SnakeBonus.hpp  SnakeRenderer.hpp  Wall.hpp
examples/SnakeOpenGL/src/: main.cpp
examples/SpaceWars/: ArcBallCamera.hpp  ArcBallPositionProvider.hpp  CMakeLists.txt  Frame.hpp  Game.hpp  IUnitsFactory.hpp  Image.hpp  MapSelector.hpp  ObjectSelector.hpp  PlanetFactory.hpp  PlanetsFactory.hpp  RaycastCallback.hpp  SpaceWarsGame.hpp  Sprite.hpp  StarsFactory.hpp  TextureAtlasVAO.hpp  UnitMetaInfo.hpp  UnitsFactory.hpp  main.cpp
examples/SpaceWars/Draw/: MeshesProvider.hpp  PlanetModel.hpp  SelectedCircleModel.hpp
examples/SpaceWars/Entities/: Asteroid.hpp  DrawableEntity.hpp  DynamicEntity.hpp  Entity.hpp  Galactic.hpp  Galaxy.hpp  GlobeBody.hpp  IEntity.hpp  IPlayersEntity.hpp  Planet.hpp  Player.hpp  Star.hpp  StaticEntity.hpp  Unit.hpp  Viper.hpp
examples/SpaceWars/Logic/: Job.hpp
examples/SpaceWars/Map/: Map.hpp
examples/SpaceWars/Meta/: UnitAssetsInformation.hpp  UnitMetaInfo.hpp
examples/SpaceWars/Players/: ComputerPlayer.hpp  GodPlayer.hpp  HumanPlayer.hpp  IPlayer.hpp  Player.hpp
examples/SpaceWars/Shaders/: UIProgram.hpp
examples/SpaceWars/UI/: DebugCamera.hpp  EntityFactoryWindow.hpp  EntityWindow.hpp  Vector.hpp
examples/TestModels/: CMakeLists.txt  Camera2D.hpp  Game.hpp  ImageAtlas.hpp  Mesh.hpp  Model.hpp  TextureAtlasVAO.hpp  main.cpp
include/: Camera.hpp  Constants.hpp  DebugWindow.hpp  Game.hpp  IEntity.hpp  IRenderingBackend.hpp  ISpaceGenerator.hpp  KeyTable.hpp  SparsedChunk.hpp  UI.hpp  Vector3f.hpp  Vector3i.hpp  Voxel.hpp  VoxelSpace.hpp
include/Engine/: Game.hpp  IKeyboardDirectInput.hpp  IKeyboardState.hpp  IKeyboardSubscriber.hpp  IMouseInput.hpp  IMouseSubscriber.hpp  ISelectable.hpp  IUpdatable.hpp  Input.hpp
include/Model/: IRenderingBackend.hpp  ISpaceGenerator.hpp  Model.hpp  Vector3.hpp  Vector3f.hpp  Vector3i.hpp  Voxel.hpp  VoxelSpace.hpp
include/Renders/: IDrawable.hpp  IRenderingBackend.hpp  IWindow.hpp
include/Renders/Console/: DebugWindow.hpp  KeyTable.hpp  UI.hpp
include/Renders/OpenGL/: ArcBallCamera.hpp  ArcBallPositionProvider.hpp  BoundingBox.hpp  Camera.hpp  Camera2D.hpp  ColorVertex.hpp  CubeMesh.hpp  CubeNormalsVAO.hpp  CubeVAO.hpp  DirectLight.hpp  FpsLikeCamera.hpp  GlfwKeyMap.hpp  GlfwKeyboardDirectInput.hpp  GlfwKeyboardState.hpp  Graphics2D.hpp  IBoundingBox.hpp  IBoundingBoxDrawable.hpp  ICamera.hpp  IPositionProvider.hpp  IProgram.hpp  InputManager.hpp  Materials.hpp  Mesh.hpp  MeshWithBoundingBox.hpp  Model.hpp  ModelPosition.hpp  ModelVAO.hpp  OpenGLRenderingBackend.hpp  PointLight.hpp  PositionShaderProgram.hpp  RectangleVAO.hpp  RotatingCamera.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp  Utils.hpp  Vertex.hpp  Window.hpp
include/Renders/OpenGL/Geometry/: AxiesDebug.hpp  Cube.hpp  GridDebug.hpp  IGeometry.hpp  IGeometryProvider.hpp  RectangleXZ.hpp  VectorDebug.hpp  VertexVAO.hpp
include/Utils/: Constants.hpp
sharedAssets/: useLightShader.frag  useLightShader.vert
sharedAssets/models/: selected.mtl
sharedAssets/models/asteroid/: asteroid.mtl
sharedAssets/models/earth/: Earth1-1.mtl
sharedAssets/models/moon/: Supporting Files.rar
sharedAssets/models/mosquito/: Mosquito.3ds  Mosquito.mtl  Thumbs.db
sharedAssets/models/planet/: planet.mtl
sharedAssets/models/space_fighter/: Trident-A10.mtl
sharedAssets/models/spaceship/: Untitled.pmd  belt_02.mtl  ship m4.pz2  ship v4.pz2  ship-m3.pz2  ship.mtl  space ship.pmd
sharedAssets/models/spaceship2/Runtime/Geometries/spaceship002/: laser.mtl
sharedAssets/models/spaceship2/Runtime/Geometries/spaceship002/Neuer Ordner/: seatbelt02.mtl
sharedAssets/models/spaceship2/Runtime/Libraries/Pose/spaceship002/: ship002v3.pz2
sharedAssets/models/spaceship2/Runtime/Libraries/Props/spaceship002/: laser.pp2  ship002.pmd
sharedAssets/models/ssy/: Lisezmoi.txt  Readme.txt  SSY217_FightingMode.mtl
sharedAssets/models/trident/: Trident-A10.mtl  trident2.mtl  trident3.mtl
sharedAssets/models/venus/: Supporting_files.rar  Textures_Venus_1K.rar
sharedAssets/models/yt/: yt-1760.3ds  yt-1760.obj.mtl
sharedAssets/models/yt/YT1760/: Read Me.txt
sharedAssets/models/yt/YT1760/Props/: YT-1760.duf
sharedAssets/planets/: planet.mtl
sharedAssets/shaders/: 2dshader.frag  2dshader.vert  debugShader.frag  debugShader.vert  model.frag  simpleShader.frag  simpleShader.vert  useLightShader.frag  useLightShader.vert
sharedAssets/spritesheets/: FontData.csv  sprites.json
src/: Camera.cpp  Cube.cpp  Shader.cpp  ShaderProgram.cpp  glad.c  main.cc  main.cpp  main.old
